fix the links & add url link

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                     <a class="nav-link text-danger" href="#">خانه <span class="sr-only ">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">درباره ما</a>
+                    <a class="nav-link" href="#about">درباره ما</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> ویژگی ها</a>
+                    <a class="nav-link" href="#Property"> ویژگی ها</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">دیدگاه ها </a>
+                    <a class="nav-link" href="#idea">دیدگاه ها </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> تماس با ما</a>
+                    <a class="nav-link" href="#contact"> تماس با ما</a>
                 </li>
             </ul>
         </div>
@@ -227,7 +227,7 @@
         </div>
     </section>
 
-    <section class="my-5">
+    <section class="my-5" id="idea">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 text-center">
@@ -301,7 +301,7 @@
         </div>
     </section>
 
-    <section class="my-5">
+    <section class="my-5" id="contact">
         <div class="container">
             <h3 class="text-center">تماس <span class="text-danger">با ما</span></h3>
             <p class="text-center mb-5">راه های ارتباطی را در ادامه مشاهده نمایید</p>
